# IlexInventory-Server

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
.claude/agents/: executor.md  planner.md
.claude/commands/: break.md  build.md  execute.md  onboarding.md  plan.md  review-issue.md  run.md  spec.md
.claude/scripts/: issue-review-monitor.sh
.claude/skills/code-review-partner/: SKILL.md
.claude/skills/ilex-discipline/: SKILL.md
.claude/skills/tdd/: SKILL.md
.epic/: settings.json
.epic/issues/: ILEX-001-bootstrap-django-project.md  ILEX-002-setup-foundation-and-init-schema.md  ILEX-003-implement-auth-in-core.md  ILEX-004-implement-catalog-app.md  ILEX-005-implement-procurement-app.md  ILEX-006-implement-inventory-app.md  ILEX-007-implement-sales-app.md  ILEX-008-implement-financials-app.md  ILEX-009-add-csv-exports-and-indexes.md  ILEX-010-integrate-openapi-with-frontend.md  ILEX-011-setup-deploy-pipeline.md  ILEX-012-setup-agent-foundation-and-readonly-role.md  ILEX-013-implement-chat-endpoint-and-query-mode.md  ILEX-014-implement-draft-mode-and-domain-skills.md  ILEX-015-add-onboarding-skill-and-empty-state-integration.md  ILEX-016-polish-and-fundament-phase-3.md
.github/workflows/: ci.yml
backend/: asgi.py  conftest.py  openapi.json  urls.py  wsgi.py
backend/migrations/: 0001_init.sql  0002_auth_fk.sql  0003_catalog.sql  0004_procurement.sql  0005_inventory.sql  0006_views.sql  0007_sales.sql  0008_financials.sql  0009_indexes.sql
backend/settings/: _env.py  base.py  dev.py  prod.py
deploy/: docker-compose.prod.yml  docker-compose.yml  fly.toml
docs/: agent.md  architecture.md  decisions.md  endpoints.md  product.md  scratch-requirements.md  takehome-challenge.md
docs/architecture/: architecture.md
docs/issues/: 001-bootstrap-django-project.md  001-setup-foundation-helpers.md  002-setup-foundation-and-init-schema.md  003-implement-auth-in-core.md  004-implement-catalog-app.md  005-implement-procurement-app.md  006-implement-inventory-app.md  007-implement-sales-app.md  008-implement-financials-app.md  009-add-csv-exports-and-indexes.md  010-integrate-openapi-with-frontend.md  011-setup-deploy-pipeline.md  012-setup-agent-foundation-and-readonly-role.md  013-implement-chat-endpoint-and-query-mode.md  014-implement-draft-mode-and-domain-skills.md  015-add-onboarding-skill-and-empty-state-integration.md  016-polish-and-fundament-phase-3.md  CHANGELOG.md  status.md
docs/specs/: SPEC.md  agent.md
scripts/: check_no_orm.sh  check_openapi_drift.sh  entrypoint.sh  smoke_health.sh
(+165 files in other folders)
