[project]
name = "ilex-inventory-server"
version = "0.1.0"
description = "Ilex Inventory Server — Django + DRF backend for F&B CPG inventory."
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools]
# This project is run from source, not packaged. Disable auto-discovery.
packages = []

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
