[project]
name = "ilex-inventory-server"
version = "0.1.0"
description = "Ilex Inventory Server — Django + DRF backend for F&B CPG inventory."
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.4",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pytest-django>=4.8",
]

[tool.setuptools]
# This project is run from source, not packaged. Disable auto-discovery.
packages = []

[tool.ilex.checks]
# CI gate: ORM allowlist (BE-D14).
# Only backend/apps/core/auth.py may import from django.db.models or django.contrib.auth.
# Run: ./scripts/check_no_orm.sh
# Or:  pytest backend/apps/core/tests/unit/test_no_orm.py (runs on every pytest invocation)
no_orm_allowlist = "backend/apps/core/auth.py"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend"]
python_files = ["test_*.py"]
addopts = "-ra"
DJANGO_SETTINGS_MODULE = "settings.dev"

[tool.ruff]
line-length = 100
target-version = "py312"
